--- a/index/index.css
+++ b/index/index.css
@@ -118,6 +118,18 @@ table > tbody > tr > td{
     border: 1px solid rgb(124, 124, 124);
     background-color: rgb(209, 255, 255);
 }
+.table2>table > tbody > tr > th{
+    font-size: 15px;
+    padding: 7px 40px;
+    border: 1px solid rgb(148, 148, 148);
+    background-color: rgb(144, 221, 142);
+}
+.table2 >table > tbody > tr > td{
+    font-size: 10px;
+    padding: 2px 24px;
+    border: 1px solid rgb(124, 124, 124);
+    background-color: rgb(146, 230, 121);
+}
 .page_change{
     margin-left: 40%;
 }
@@ -151,7 +163,7 @@ table > tbody > tr > td{
 }
 .add_news{
     width: 1100px;
-    height: 300px;
+    height: 190px;
     background-color: rgb(207, 207, 207);
     margin-bottom: 12px;
     border-radius: 10px;
@@ -160,7 +172,7 @@ table > tbody > tr > td{
 }
 .all_news{
     width: 1100px;
-    height: 500px;
+    height: 610px;
     background-color: rgb(207, 207, 207);
     border-radius: 10px;
     overflow: hidden;
@@ -189,7 +201,7 @@ table > tbody > tr > td{
 }
 .edit{
     width: 100%;
-    height: 275px;
+    height: 175px;
 }
 .publish_title{
     width: 100px;
