--- a/index/index.css
+++ b/index/index.css
@@ -108,15 +108,16 @@ body{
 }
 table > tbody > tr > th{
     font-size: 15px;
-    padding: 2px 12px;
+    padding: 2px 31px;
     border: 1px solid rgb(148, 148, 148);
     background-color: rgb(209, 255, 255);
 }
 table > tbody > tr > td{
     font-size: 10px;
-    padding: 2px 14px;
+    padding: 2px 7px;
     border: 1px solid rgb(124, 124, 124);
     background-color: rgb(209, 255, 255);
+    text-align: center;
 }
 .table2>table > tbody > tr > th{
     font-size: 15px;
@@ -129,6 +130,7 @@ table > tbody > tr > td{
     padding: 2px 24px;
     border: 1px solid rgb(124, 124, 124);
     background-color: rgb(146, 230, 121);
+    text-align: center;
 }
 .page_change{
     margin-left: 40%;
@@ -293,4 +295,48 @@ background-color: rgba(250, 235, 215, 0);
     width: 200px;
     height: 160px;
     resize:none;
+}
+.operate{
+    color:blue;
+    font-weight: 600;
+    cursor:pointer
+
+}
+.warning1{
+width: 200px;
+height: 100px;
+position: fixed;
+top: 300px;
+left: 45%;
+background-color: rgb(255, 255, 255);
+z-index: 999;
+border-radius: 10px;
+border: solid rgb(141, 141, 141) 1px;
+font-size: 20px;
+font-weight: 600;
+overflow: hidden;
+}
+.warning_content{
+    width: 100%;
+    height: 40px;
+    background-color: antiquewhite;
+    font-size: 15px;
+    text-align: center;
+    line-height: 40px;
+}
+.warn_yes{
+    width: 50%;
+    float: left;
+    text-align: center;
+    color: aliceblue;
+    background-color: rgb(165, 165, 165);
+    cursor:pointer
+}
+.warn_no{
+    width: 50%;
+    float: left;
+    text-align: center;
+    color: aliceblue;
+    background-color: rgb(99, 99, 99);
+    cursor:pointer
 }
